--- a/scss_4/_rightside.scss
+++ b/scss_4/_rightside.scss
@@ -30,12 +30,12 @@
     .statusWindow {
         width: 100%;
         height: 113px;
-        background: #f5f5f5;
+        background: #ffffff;
         position: relative;
         
         p {
-            background: #ffffff;
-            color: #454545;
+            background: #39547f;
+            color: #ffffff;
             padding: 7px 15px;
             font-size: 12px;
         }
@@ -126,9 +126,8 @@
         text-align: center;
 
         .title {
-            background: #ffffff;
-            border-bottom: solid 1px #f6f6f6;
-            color: #454545;
+            background: #39547f;
+            color: #ffffff;
             padding: 7px 15px;
             font-size: 12px;
             text-align: left;
@@ -182,7 +181,7 @@
                     color: #595959;
     
                     span {
-                        color: #356bf7;
+                        color: #c31c2d;
                         font-size: 12px;
                     }
                 }
@@ -245,16 +244,11 @@
             button {
                 width: 100%;
                 height: 100%;
-                background: #e6e6e6;
-                color: #595959;
-                font-size: 14px;
-                border-radius: 3px 3px 0px 0px;
-                border: solid 1px transparent;
-
-                &:hover,&:active,&.active {
-                    background: #ffffff;
-                    color: #454545;
-                }
+                background: #39547f;
+                color: #ffffff;
+                font-size: 12px;
+                text-align: left;
+                padding-left: 15px;
             }
         }
 
@@ -299,44 +293,48 @@
                     overflow: hidden;
                     cursor: pointer;
                     background: #ffffff;
+                    border-style: solid;
+                    border-width: 1px;
+                    border-color: transparent transparent #f1f1f1 transparent;
 
                     &:hover,&:active {
+                        border-color: #d31c1c;
+                        box-shadow: 0px 0px 5px 0px #d31c1c49;
 
                         &::before {
                             transform: rotate(90deg);
-                            border-color: transparent #356bf7; 
+                            border-color: transparent #bb092f; 
                         }
 
                         .gameName {
-                            border-color: #356bf7;
-                            color: #356bf7;
+                            color: #ce1427;
                         }
 
                         .games {
-                            color: #356bf7;
+                            color: #ce1427;
                         }
                     }
 
                     &.active {
-                        background: #f7f7f7;
                         height: auto;
+                        border-color: #ffffff;
+                        background: #39537e;
                         position: sticky;
                         top: 0px;
                         z-index: 2;
 
                         &::before {
                             transform: rotate(90deg);
-                            border-color: transparent #356bf7;
+                            border-color: transparent #bb092f;
                         }
 
                         .gameName {
-                            border-color: #356bf7;
-                            color: #356bf7;
+                            color: #ce1427;
                             background: #ffffff;
                         }
 
                         .games {
-                            color: #356bf7;
+                            color: #ce1427;
                         }
                     }
 
@@ -347,7 +345,7 @@
                         height: 0px;
                         border-style: solid;
                         border-width: 7px 0px 7px 8px;
-                        border-color: transparent #8d8d8d;
+                        border-color: transparent #678ac2;
                         right: 25px;
                         top: 8px;
                         transition: 0.3s all;
@@ -357,7 +355,7 @@
                         display: block;
                         width: 100%;
                         height: 30px;
-                        color: #454545;
+                        color: #1b1b1b;
                         font-size: 13px;
                         box-sizing: border-box;
                         padding-left: 25px;
@@ -367,7 +365,7 @@
                     .games {
                         font-size: 13px;
                         font-weight: bold;
-                        color: #454545;
+                        color: #1b1b1b;
                         position: absolute;
                         right: 60px;
                         top: 0px;
@@ -395,17 +393,17 @@
                             top: 50%;
                             transform: translateY(-50%);
                             font-size: 12px;
-                            color: #454545;
+                            color: #1b1b1b;
 
                             span {
                                 font-weight: bold;
-                                color: #356bf7;
+                                color: #ce1427;
 
                                 .situation {
                                     font-weight: normal;
                                     float: right;
                                     margin-right: 20px;
-                                    color: #8d8d8d;
+                                    color: #595959;
 
                                     &.onLive {
                                         position: relative;
@@ -419,7 +417,7 @@
                                             height: 19px;
                                             top: -1px;
                                             left: -10px;
-                                            background: url('../images/liveBg.png') no-repeat;
+                                            background: url('../images/liveBg2.png') no-repeat;
                                             z-index: -1;
                                         }
                                     }
@@ -432,14 +430,15 @@
                                 bottom: 0px;
                                 width: 70px;
                                 height: 30px;
-                                background: #ffffff;
+                                background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
                                 border-radius: 3px;
-                                box-shadow: 1px 2px 10px 0px #00000049;
-                                color: #356bf7;
+                                box-shadow: 1px 2px 8px 0px #00000049;
+                                color: #ce1427;
 
                                 &:hover,&:active,&.active {
-                                    background: #356bf7;
+                                    background: #cc1622;
                                     color: #ffffff;
+                                    box-shadow: none;
                                 }
                             }
                         }
