--- a/scss_4/style.scss
+++ b/scss_4/style.scss
@@ -13,7 +13,7 @@
 html {
     width: 100%;
     height: 100%;
-    background: #ededed;
+    background: #c8dfed;
 
     body {
         width: 100%;
