--- a/css_3/style.css
+++ b/css_3/style.css
@@ -130,6 +130,7 @@ header .top span {
   margin-right: 15px;
 }
 header .top .threeCircle {
+  font-size: 0px;
   float: right;
   width: auto;
   height: 100%;
@@ -139,7 +140,7 @@ header .top .threeCircle button {
   width: 15px;
   height: 15px;
   border-radius: 30px;
-  margin: 5px 5px 0px 0px;
+  margin: 5px 8px 0px 0px;
   border: solid 2px #31a20b;
   background: #131313;
 }
@@ -154,7 +155,7 @@ header .top .threeCircle button:nth-of-type(3) {
 header .top .threeCircle button:nth-of-type(4) {
   background: #ffffff;
   border-color: #d31c1c;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 header article {
   width: 100%;
