--- a/css_4/style.css
+++ b/css_4/style.css
@@ -131,6 +131,7 @@ header .top span {
   margin-right: 15px;
 }
 header .top .threeCircle {
+  font-size: 0px;
   float: right;
   width: auto;
   height: 100%;
@@ -140,7 +141,7 @@ header .top .threeCircle button {
   width: 15px;
   height: 15px;
   border-radius: 30px;
-  margin: 5px 5px 0px 0px;
+  margin: 5px 8px 0px 0px;
   border: solid 2px #31a20b;
   background: #131313;
 }
@@ -155,7 +156,7 @@ header .top .threeCircle button:nth-of-type(3) {
 header .top .threeCircle button:nth-of-type(4) {
   background: #ffffff;
   border-color: #d31c1c;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 header article {
   width: 100%;
@@ -424,7 +425,7 @@ main .bg {
   height: 1000px;
   position: absolute;
   top: 0px;
-  background: #ededed;
+  background: linear-gradient(to top, #c8dfed 0%, #ddebf3 69%);
   z-index: -999;
 }
 
@@ -570,38 +571,32 @@ main .bg {
   font-size: 20px;
 }
 .left ul li:hover a {
-  border-color: #356bf7;
-  color: #356bf7;
-  box-shadow: 0px 0px 5px 0px #00000049;
+  border-color: #d31c1c;
+  color: #ce1427;
+  box-shadow: 0px 0px 5px 0px #d31c1c49;
   z-index: 10;
 }
-.left ul li:hover a svg {
-  fill: #356bf7;
-}
-.left ul li:hover a i {
-  color: #356bf7;
+.left ul li:hover a .total {
+  color: #ce1427;
 }
 .left ul li:active .smallList, .left ul li.active .smallList {
   display: block;
 }
 .left ul li:active a, .left ul li.active a {
-  border-color: #356bf7;
-  color: #356bf7;
-  box-shadow: 0px 0px 5px 0px #00000049;
+  border-color: #d31c1c;
+  color: #ce1427;
+  box-shadow: 0px 0px 5px 0px #d31c1c49;
   z-index: 10;
 }
-.left ul li:active a svg, .left ul li.active a svg {
-  fill: #356bf7;
-}
-.left ul li:active a i, .left ul li.active a i {
-  color: #356bf7;
+.left ul li:active a .total, .left ul li.active a .total {
+  color: #ce1427;
 }
 .left ul li.onLive .live {
   display: block;
 }
 .left ul li a {
   display: block;
-  color: #454545;
+  color: #1b1b1b;
   width: 100%;
   background: #ffffff;
   height: 45px;
@@ -617,7 +612,7 @@ main .bg {
   top: 12px;
   left: 18px;
   font-size: 18px;
-  color: #8d8d8d;
+  color: #d31c1c;
 }
 .left ul li a i::before {
   margin: 0px auto;
@@ -637,14 +632,14 @@ main .bg {
   position: absolute;
   left: 18px;
   top: 12px;
-  fill: #8d8d8d;
+  fill: #d31c1c;
 }
 .left ul li a .total {
   position: absolute;
   right: 10px;
   top: 0px;
   font-size: 13px;
-  color: #454545;
+  color: #1b1b1b;
 }
 .left ul li a .live {
   display: none;
@@ -656,7 +651,7 @@ main .bg {
   transform: translateY(-50%);
   right: 42px;
   font-size: 12px;
-  background: linear-gradient(to right, #ffab00 0%, #ff4802 100%);
+  background: linear-gradient(to left, #0d8c31 0%, #12bb26 100%);
   color: #ffffff;
   padding: 0px 4px;
   border-radius: 3px;
@@ -709,12 +704,12 @@ main .bg {
 .right .statusWindow {
   width: 100%;
   height: 113px;
-  background: #f5f5f5;
+  background: #ffffff;
   position: relative;
 }
 .right .statusWindow p {
-  background: #ffffff;
-  color: #454545;
+  background: #39547f;
+  color: #ffffff;
   padding: 7px 15px;
   font-size: 12px;
 }
@@ -793,9 +788,8 @@ main .bg {
   text-align: center;
 }
 .right .liveWindow .title {
-  background: #ffffff;
-  border-bottom: solid 1px #f6f6f6;
-  color: #454545;
+  background: #39547f;
+  color: #ffffff;
   padding: 7px 15px;
   font-size: 12px;
   text-align: left;
@@ -838,7 +832,7 @@ main .bg {
   color: #595959;
 }
 .right .liveWindow .teamWindow .score p span {
-  color: #356bf7;
+  color: #c31c2d;
   font-size: 12px;
 }
 .right .liveWindow .liveShow {
@@ -889,15 +883,11 @@ main .bg {
 .right .room .onebut button {
   width: 100%;
   height: 100%;
-  background: #e6e6e6;
-  color: #595959;
-  font-size: 14px;
-  border-radius: 3px 3px 0px 0px;
-  border: solid 1px transparent;
-}
-.right .room .onebut button:hover, .right .room .onebut button:active, .right .room .onebut button.active {
-  background: #ffffff;
-  color: #454545;
+  background: #39547f;
+  color: #ffffff;
+  font-size: 12px;
+  text-align: left;
+  padding-left: 15px;
 }
 .right .room .livelist {
   display: none;
@@ -932,21 +922,28 @@ main .bg {
   overflow: hidden;
   cursor: pointer;
   background: #ffffff;
+  border-style: solid;
+  border-width: 1px;
+  border-color: transparent transparent #f1f1f1 transparent;
+}
+.right .room .livelist ul li:hover, .right .room .livelist ul li:active {
+  border-color: #d31c1c;
+  box-shadow: 0px 0px 5px 0px #d31c1c49;
 }
 .right .room .livelist ul li:hover::before, .right .room .livelist ul li:active::before {
   transform: rotate(90deg);
-  border-color: transparent #356bf7;
+  border-color: transparent #bb092f;
 }
 .right .room .livelist ul li:hover .gameName, .right .room .livelist ul li:active .gameName {
-  border-color: #356bf7;
-  color: #356bf7;
+  color: #ce1427;
 }
 .right .room .livelist ul li:hover .games, .right .room .livelist ul li:active .games {
-  color: #356bf7;
+  color: #ce1427;
 }
 .right .room .livelist ul li.active {
-  background: #f7f7f7;
   height: auto;
+  border-color: #ffffff;
+  background: #39537e;
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
@@ -954,15 +951,14 @@ main .bg {
 }
 .right .room .livelist ul li.active::before {
   transform: rotate(90deg);
-  border-color: transparent #356bf7;
+  border-color: transparent #bb092f;
 }
 .right .room .livelist ul li.active .gameName {
-  border-color: #356bf7;
-  color: #356bf7;
+  color: #ce1427;
   background: #ffffff;
 }
 .right .room .livelist ul li.active .games {
-  color: #356bf7;
+  color: #ce1427;
 }
 .right .room .livelist ul li::before {
   content: "";
@@ -971,7 +967,7 @@ main .bg {
   height: 0px;
   border-style: solid;
   border-width: 7px 0px 7px 8px;
-  border-color: transparent #8d8d8d;
+  border-color: transparent #678ac2;
   right: 25px;
   top: 8px;
   transition: 0.3s all;
@@ -980,7 +976,7 @@ main .bg {
   display: block;
   width: 100%;
   height: 30px;
-  color: #454545;
+  color: #1b1b1b;
   font-size: 13px;
   box-sizing: border-box;
   padding-left: 25px;
@@ -989,7 +985,7 @@ main .bg {
 .right .room .livelist ul li .games {
   font-size: 13px;
   font-weight: bold;
-  color: #454545;
+  color: #1b1b1b;
   position: absolute;
   right: 60px;
   top: 0px;
@@ -1015,17 +1011,17 @@ main .bg {
   top: 50%;
   transform: translateY(-50%);
   font-size: 12px;
-  color: #454545;
+  color: #1b1b1b;
 }
 .right .room .livelist ul li .innerList p span {
   font-weight: bold;
-  color: #356bf7;
+  color: #ce1427;
 }
 .right .room .livelist ul li .innerList p span .situation {
   font-weight: normal;
   float: right;
   margin-right: 20px;
-  color: #8d8d8d;
+  color: #595959;
 }
 .right .room .livelist ul li .innerList p span .situation.onLive {
   position: relative;
@@ -1039,7 +1035,7 @@ main .bg {
   height: 19px;
   top: -1px;
   left: -10px;
-  background: url("../images/liveBg.png") no-repeat;
+  background: url("../images/liveBg2.png") no-repeat;
   z-index: -1;
 }
 .right .room .livelist ul li .innerList p button {
@@ -1048,14 +1044,15 @@ main .bg {
   bottom: 0px;
   width: 70px;
   height: 30px;
-  background: #ffffff;
+  background: linear-gradient(to top, #ffffff 5%, #ebf0f2 26%, #ffffff 82%);
   border-radius: 3px;
-  box-shadow: 1px 2px 10px 0px #00000049;
-  color: #356bf7;
+  box-shadow: 1px 2px 8px 0px #00000049;
+  color: #ce1427;
 }
 .right .room .livelist ul li .innerList p button:hover, .right .room .livelist ul li .innerList p button:active, .right .room .livelist ul li .innerList p button.active {
-  background: #356bf7;
+  background: #cc1622;
   color: #ffffff;
+  box-shadow: none;
 }
 .right .room .bettingStatus {
   display: none;
@@ -4596,7 +4593,7 @@ main .bg {
 .hideboard {
   width: 1260px;
   height: 70px;
-  background: #ededed;
+  background: #ddebf3;
   position: absolute;
   z-index: 5;
   left: 280px;
@@ -4606,12 +4603,12 @@ main .bg {
 .topfix {
   width: calc(100% - 660px);
   height: 50px;
-  background: #ededed;
+  background: #ffffff;
   position: absolute;
-  top: 10px;
+  top: 0px;
   left: 280px;
   z-index: 6;
-  border-bottom: solid 1px #dfdfdf;
+  box-shadow: 0px 2px 5px 0px #00000049;
 }
 .topfix.innerMode {
   top: 126px;
@@ -4730,29 +4727,35 @@ main .bg {
   height: 0px;
   border-style: solid;
   border-width: 8px 6px 0px 6px;
-  border-color: #8d8d8d transparent;
+  border-color: #595959 transparent;
   right: 10px;
   top: 20px;
   pointer-events: none;
 }
 .topfix .nor .kind select, .topfix .nor .sort select, .topfix .nor .chooseLeague select {
-  background: #ffffff;
-  color: #595959;
+  background: linear-gradient(to top, #ffffff 5%, #ebf0f2 26%, #ffffff 82%);
+  color: #1b1b1b;
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
   padding: 5px 30px 3px 5px;
-  border: solid 1px #e3e3e3;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #f5f5f5 #e0e0e0 #c2c2c2;
+  box-shadow: 0px 2px 3px 0px #00000049;
 }
 .topfix .nor .kind select span, .topfix .nor .sort select span, .topfix .nor .chooseLeague select span {
   display: none;
 }
 .topfix .nor .chooseLeague span {
-  background: #ffffff;
-  color: #595959;
+  background: linear-gradient(to top, #ffffff 5%, #ebf0f2 26%, #ffffff 82%);
+  color: #1b1b1b;
   padding: 7px 30px 4px 5px;
-  border: solid 1px #e3e3e3;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #f5f5f5 #e0e0e0 #c2c2c2;
   cursor: pointer;
+  box-shadow: 0px 2px 3px 0px #00000049;
 }
 .topfix .nor .timeSelect {
   float: left;
@@ -4783,13 +4786,13 @@ main .bg {
 .topfix .nor .timeSelect .date {
   display: inline-block;
   margin: 0px 10px;
-  color: #595959;
+  color: #1b1b1b;
   cursor: pointer;
   position: relative;
 }
 .topfix .nor .timeSelect .date .total {
   display: inline-block;
-  background: #595959;
+  background: linear-gradient(to top, #32496d 0%, #507abe 100%);
   border-radius: 3px;
   margin-left: 10px;
   line-height: 22px;
@@ -4829,7 +4832,7 @@ main .bg {
   color: #595959;
 }
 .topfix .nor .timeSelect .date .moreTimeList li:hover, .topfix .nor .timeSelect .date .moreTimeList li:active, .topfix .nor .timeSelect .date .moreTimeList li.active {
-  background: #356bf7;
+  background: #d21b1d;
   color: #ffffff;
 }
 .topfix .nor .timeSelect .date .moreTimeList li:hover .total, .topfix .nor .timeSelect .date .moreTimeList li:active .total, .topfix .nor .timeSelect .date .moreTimeList li.active .total {
@@ -4838,21 +4841,27 @@ main .bg {
 .topfix .nor .timeSelect .date .moreTimeList li:hover .total span, .topfix .nor .timeSelect .date .moreTimeList li:active .total span, .topfix .nor .timeSelect .date .moreTimeList li.active .total span {
   color: #454545;
 }
+.topfix .nor .timeSelect .date .moreTimeList li .total {
+  background: #595959;
+}
 .topfix .nor .timeSelect .smallBtn {
-  background: #ffffff;
-  border: solid 1px #e3e3e3;
-  color: #595959;
+  background: linear-gradient(to top, #ffffff 5%, #ebf0f2 26%, #ffffff 82%);
+  color: #1b1b1b;
   padding: 5px 10px 6px;
   border-radius: 3px;
   margin: 0px 3px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #f5f5f5 #e0e0e0 #c2c2c2;
+  box-shadow: 0px 2px 3px #00000049;
 }
 .topfix .nor .timeSelect .smallBtn:nth-of-type(1) {
   margin-left: 10px;
 }
 .topfix .nor .timeSelect .smallBtn:hover, .topfix .nor .timeSelect .smallBtn:active, .topfix .nor .timeSelect .smallBtn.active {
-  background: #356bf7;
+  background: #cb1622;
   color: #ffffff;
-  border-color: #356bf7;
+  box-shadow: none;
 }
 .topfix .inn {
   display: none;
@@ -6913,10 +6922,17 @@ main .bg {
 }
 .fixside .search.open {
   left: -240px;
-  background: #fafafa;
+  background: #39547f;
 }
 .fixside .search.open .searchbut:hover, .fixside .search.open .searchbut:active, .fixside .search.open .searchbut.active {
-  border-color: transparent #f6f6f6 transparent transparent;
+  border-color: #ce1427;
+  background: #ffffff;
+}
+.fixside .search.open .searchbut:hover .fixsideimg, .fixside .search.open .searchbut:active .fixsideimg, .fixside .search.open .searchbut.active .fixsideimg {
+  background-position-y: 0%;
+}
+.fixside .search.open .searchbut:hover span, .fixside .search.open .searchbut:active span, .fixside .search.open .searchbut.active span {
+  color: #ce1427;
 }
 .fixside .search .searchbut {
   width: 60px;
@@ -6925,26 +6941,27 @@ main .bg {
   border-radius: 3px 0px 0px 3px;
   float: left;
   text-align: center;
-  border: solid 1px transparent;
+  border: solid 1px #ce1427;
   background: #ffffff;
 }
 .fixside .search .searchbut:hover, .fixside .search .searchbut:active, .fixside .search .searchbut.active {
-  border-color: #3366ec;
+  border-color: #ecf7ff;
+  background: linear-gradient(to bottom, #32496d 0%, #507abe 100%);
 }
 .fixside .search .searchbut:hover span, .fixside .search .searchbut:active span, .fixside .search .searchbut.active span {
-  color: #356bf7;
+  color: #ffffff;
 }
 .fixside .search .searchbut:hover .fixsideimg, .fixside .search .searchbut:active .fixsideimg, .fixside .search .searchbut.active .fixsideimg {
   background-position-y: 100%;
 }
 .fixside .search .searchbut span {
   font-size: 13px;
-  color: #454545;
+  color: #1b1b1b;
 }
 .fixside .search .searchbut .fixsideimg {
   width: 30px;
   height: 29px;
-  background: url("../images/fixside_ic3.png");
+  background: url("../images/fixside_ic4.png") no-repeat;
   background-size: 500%;
   float: left;
   margin: 7px 15px 3px 14px;
@@ -6952,28 +6969,28 @@ main .bg {
 }
 .fixside .search input {
   width: 140px;
-  height: 30px;
+  height: 26px;
   font-size: 16px;
   padding-left: 10px;
-  border: solid 1px #e3e3e3;
+  border: solid 1px #d6d6d6;
   border-top: none;
   border-radius: 3px;
   float: left;
   margin: 15px 0px 0px 10px;
   background: #ffffff;
-  color: #8d8d8d;
+  color: #595959;
 }
 .fixside .search input::placeholder {
   font-weight: bold;
-  color: #8d8d8d;
+  color: #595959;
   font-size: 14px;
 }
 .fixside .search button {
   width: 50px;
   height: 28px;
   box-shadow: 0px 0px 10px 0px #00000017;
-  background: #ffffff;
-  color: #356bf7;
+  background: linear-gradient(to top, #ffffff 5%, #ebf0f2 26%, #ffffff 82%);
+  color: #ce1427;
   float: left;
   border-radius: 5px;
   font-size: 16px;
@@ -6981,7 +6998,7 @@ main .bg {
 }
 .fixside .search button:hover, .fixside .search button:active, .fixside .search button.active {
   color: #ffffff;
-  background: #356bf7;
+  background: linear-gradient(to top, #d31c1c 0%, #bb092f 98%);
 }
 .fixside .search .searchbox {
   width: 240px;
@@ -7001,9 +7018,7 @@ main .bg {
   background: #ffffff;
   cursor: pointer;
   box-sizing: border-box;
-  color: #454545;
-  border: solid 1px transparent;
-  border-bottom-color: #c8c8c8;
+  color: #ce1427;
 }
 .fixside .search .searchbox li::before {
   content: "";
@@ -7011,18 +7026,16 @@ main .bg {
   height: 0px;
   position: absolute;
   border-style: solid;
-  border-color: #8d8d8d transparent;
+  border-color: #678ac2 transparent;
   border-width: 10px 8px 0px 8px;
   right: 40px;
   top: 21px;
   transform: rotate(-90deg);
   transition: 0.3s all;
 }
-.fixside .search .searchbox li:hover, .fixside .search .searchbox li:active, .fixside .search .searchbox li.active {
-  border-color: #356bf7;
-}
 .fixside .search .searchbox li:hover::before, .fixside .search .searchbox li:active::before, .fixside .search .searchbox li.active::before {
   transform: rotate(0deg);
+  border-color: #bb092f transparent;
 }
 .fixside .search .searchbox div {
   background: #f5f5f5;
@@ -7038,12 +7051,12 @@ main .bg {
   width: 100%;
   height: 50px;
   line-height: 50px;
-  color: #595959;
+  color: #1b1b1b;
   border-bottom: solid 1px #c8c8c8;
   font-size: 14px;
 }
 .fixside .search .searchbox div a:hover, .fixside .search .searchbox div a:active, .fixside .search .searchbox div a.active {
-  background: #356bf7;
+  background: linear-gradient(to right, #d31c1c 0%, #bb092f 98%);
   color: #ffffff;
 }
 .fixside .search .searchbox div a .team {
@@ -7080,27 +7093,28 @@ main .bg {
   border-radius: 3px 0px 0px 3px;
   text-align: center;
   margin-top: 3px;
-  border: solid 1px transparent;
+  border: solid 1px #ce1427;
   cursor: pointer;
   box-shadow: 0px 0px 10px 0px #00000017;
 }
 .fixside .fun a:hover, .fixside .fun a:active, .fixside .fun a.active {
-  border-color: #356bf7;
+  border-color: #ecf7ff;
+  background: linear-gradient(to bottom, #32496d 0%, #507abe 100%);
 }
 .fixside .fun a:hover span, .fixside .fun a:active span, .fixside .fun a.active span {
-  color: #356bf7;
+  color: #ffffff;
 }
 .fixside .fun a:hover .fixsideimg, .fixside .fun a:active .fixsideimg, .fixside .fun a.active .fixsideimg {
   background-position-y: 100%;
 }
 .fixside .fun a span {
   font-size: 13px;
-  color: #454545;
+  color: #1b1b1b;
 }
 .fixside .fun a .fixsideimg {
   width: 30px;
   height: 30px;
-  background: url("../images/fixside_ic3.png") no-repeat;
+  background: url("../images/fixside_ic4.png") no-repeat;
   background-size: 500%;
   float: left;
   margin: 8px 15px 3px 17px;
@@ -8672,7 +8686,7 @@ main .bg {
 html {
   width: 100%;
   height: 100%;
-  background: #ededed;
+  background: #c8dfed;
 }
 html body {
   width: 100%;
