--- a/scss_4/_fixside.scss
+++ b/scss_4/_fixside.scss
@@ -77,12 +77,21 @@
         
         &.open {
             left: -240px;
-            background: #fafafa;
+            background: #39547f;
 
             .searchbut {
                 
                 &:hover,&:active,&.active {
-                    border-color: transparent #f6f6f6 transparent transparent;
+                    border-color: #ce1427;
+                    background: #ffffff;
+
+                    .fixsideimg {
+                        background-position-y: 0%;
+                    }
+                    
+                    span {
+                        color: #ce1427;
+                    }
                 }
             }
         }
@@ -94,14 +103,15 @@
             border-radius: 3px 0px 0px 3px;
             float: left;
             text-align: center;
-            border: solid 1px transparent;
+            border: solid 1px #ce1427;
             background: #ffffff;
 
             &:hover,&:active,&.active {
-                border-color: #3366ec;
+                border-color: #ecf7ff;
+                background: linear-gradient(to bottom,#32496d 0%,#507abe 100%);
 
                 span {
-                    color: #356bf7;
+                    color: #ffffff;
                 }
 
                 .fixsideimg {
@@ -111,13 +121,13 @@
 
             span {
                 font-size: 13px;
-                color: #454545;
+                color: #1b1b1b;
             }
 
             .fixsideimg {
                 width: 30px;
                 height: 29px;
-                background: url('../images/fixside_ic3.png');
+                background: url('../images/fixside_ic4.png') no-repeat;
                 background-size: 500%;
                 float: left;
                 margin: 7px 15px 3px 14px;
@@ -128,20 +138,20 @@
 
         input {
             width: 140px;
-            height: 30px;
+            height: 26px;
             font-size: 16px;
             padding-left: 10px;
-            border: solid 1px #e3e3e3;
+            border: solid 1px #d6d6d6;
             border-top: none;
             border-radius: 3px;
             float: left;
             margin: 15px 0px 0px 10px;
             background: #ffffff;
-            color: #8d8d8d;
+            color: #595959;
 
             &::placeholder {
                 font-weight: bold;
-                color: #8d8d8d;
+                color: #595959;
                 font-size: 14px;
             }
         }
@@ -150,8 +160,8 @@
             width: 50px;
             height: 28px;
             box-shadow: 0px 0px 10px 0px #00000017;
-            background: #ffffff;
-            color: #356bf7;
+            background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
+            color: #ce1427;
             float: left;
             border-radius: 5px;
             font-size: 16px;
@@ -159,7 +169,7 @@
 
             &:hover,&:active,&.active {
                 color: #ffffff;
-                background: #356bf7;
+                background: linear-gradient(to top,#d31c1c 0%,#bb092f 98%);
             }
         }
 
@@ -182,9 +192,7 @@
                 background: #ffffff;
                 cursor: pointer;
                 box-sizing: border-box;
-                color: #454545;
-                border: solid 1px transparent;
-                border-bottom-color: #c8c8c8;
+                color: #ce1427;
 
                 &::before {
                     content: "";
@@ -192,7 +200,7 @@
                     height: 0px;
                     position: absolute;
                     border-style: solid;
-                    border-color: #8d8d8d transparent;
+                    border-color: #678ac2 transparent;
                     border-width: 10px 8px 0px 8px;
                     right: 40px;
                     top: 21px;
@@ -201,10 +209,10 @@
                 }
 
                 &:hover,&:active,&.active {
-                    border-color: #356bf7;
 
                     &::before {
                         transform: rotate(0deg);
+                        border-color: #bb092f transparent;
                     }
                 }
             }
@@ -224,12 +232,12 @@
                     width: 100%;
                     height: 50px;
                     line-height: 50px;
-                    color: #595959;
+                    color: #1b1b1b;
                     border-bottom: solid 1px #c8c8c8;
                     font-size: 14px;
 
                     &:hover,&:active,&.active {
-                        background: #356bf7;
+                        background: linear-gradient(to right,#d31c1c 0%,#bb092f 98%);
                         color: #ffffff;
                     }
 
@@ -276,15 +284,16 @@
             border-radius: 3px 0px 0px 3px;
             text-align: center;
             margin-top: 3px;
-            border: solid 1px transparent;
+            border: solid 1px #ce1427;
             cursor: pointer;
             box-shadow: 0px 0px 10px 0px #00000017;
 
             &:hover,&:active,&.active {
-                border-color: #356bf7;
+                border-color: #ecf7ff;
+                background: linear-gradient(to bottom,#32496d 0%,#507abe 100%);
 
                 span {
-                    color: #356bf7;
+                    color: #ffffff;
                 }
 
                 .fixsideimg {
@@ -294,13 +303,13 @@
 
             span {
                 font-size: 13px;
-                color: #454545;
+                color: #1b1b1b;
             }
 
             .fixsideimg {
                 width: 30px;
                 height: 30px;
-                background: url('../images/fixside_ic3.png') no-repeat;
+                background: url('../images/fixside_ic4.png') no-repeat;
                 background-size: 500%;
                 float: left;
                 margin: 8px 15px 3px 17px;
