--- a/scss_4/_leftside.scss
+++ b/scss_4/_leftside.scss
@@ -1,4 +1,4 @@
-.left {
+ .left {
     width: 270px;
     height: 850px;
     float: left;
@@ -187,17 +187,13 @@
             &:hover {
 
                 a {
-                    border-color: #356bf7;
-                    color: #356bf7;
-                    box-shadow: 0px 0px 5px 0px #00000049;
-                    z-index: 10;
+                    border-color: #d31c1c;
+                    color: #ce1427;
+                    box-shadow: 0px 0px 5px 0px #d31c1c49;
+                    z-index: 10; 
 
-                    svg {
-                        fill: #356bf7;
-                    }
-
-                    i {
-                        color: #356bf7;
+                    .total {
+                        color: #ce1427;
                     }
                 }
             }
@@ -209,17 +205,13 @@
                 }
 
                 a {
-                    border-color: #356bf7;
-                    color: #356bf7;
-                    box-shadow: 0px 0px 5px 0px #00000049;
+                    border-color: #d31c1c;
+                    color: #ce1427;
+                    box-shadow: 0px 0px 5px 0px #d31c1c49;
                     z-index: 10;
 
-                    svg {
-                        fill: #356bf7;
-                    }
-
-                    i {
-                        color: #356bf7;
+                    .total {
+                        color: #ce1427;
                     }
                 }
             }
@@ -233,7 +225,7 @@
 
             a {
                 display: block;
-                color: #454545 ;
+                color: #1b1b1b;
                 width: 100%;
                 background: #ffffff;
                 height: 45px;
@@ -250,7 +242,7 @@
                     top: 12px;
                     left: 18px;
                     font-size: 18px;
-                    color: #8d8d8d;
+                    color: #d31c1c;
 
                     &::before {
                         margin: 0px auto;
@@ -277,7 +269,7 @@
                     position: absolute;
                     left: 18px;
                     top: 12px;
-                    fill: #8d8d8d;
+                    fill: #d31c1c;
                 }
 
                 //字後小框
@@ -286,7 +278,7 @@
                     right: 10px;
                     top: 0px;
                     font-size: 13px;
-                    color: #454545;
+                    color: #1b1b1b;
                 }
 
                 //LIVE小框
@@ -300,7 +292,7 @@
                     transform: translateY(-50%);
                     right: 42px;
                     font-size: 12px;
-                    background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+                    background: linear-gradient(to left,#0d8c31 0%, #12bb26 100%);
                     color: #ffffff;
                     padding: 0px 4px;
                     border-radius: 3px;
