--- a/scss_4/_table.scss
+++ b/scss_4/_table.scss
@@ -6,6 +6,7 @@
 	border-radius: 3px;
 	margin: 0px 0px 10px 10px;
 	background: #ffffff;
+	box-shadow: 0px 0px 5px 0px #00000049;
 
 	//內容
     tr {
@@ -24,41 +25,40 @@
 		}
 
 		&:hover,&:active,&.active {
-			border: solid 1px #356bf7;
+			border: solid 1px #d31c1c;
 			background: #ffffff;
-			box-shadow: 0px 0px 5px 2px #00000017;
+			box-shadow: 0px 0px 5px 2px #d31c1c49;
 
 			td {
-				border-top: solid 1px #356bf7;
-				color: #356bf7;
+				border-top: solid 1px #d31c1c;
+				color: #ce1427;
 
 				&.allScore {
-					color: #ffab00;
+					color: #1f54ab;
 				}
 
 				.pitcher {
-					color: #ffab00;
+					color: #1f54ab;
 				}
 
 				a {
 
 					&.tbimg3 {
-						color: #356bf7;
+						color: #ce1427;
 					}
 				}
 			}
 		}
 
       	th {
-			color: #454545;
+			color: #ffffff;
 			font-size: 13px;
 			padding: 8px 0px 7px;
 			vertical-align: middle;
-			background: #ffffff;
+			background: #39547f;
 			position: sticky;
 			top: 70px;
 			z-index: 2;
-			border-bottom: solid 1px #356bf7;
 
 			//字靠左
 			&.tLeft {
@@ -71,20 +71,13 @@
 				margin-right: 10px;
 			}
 		}
-
-		th:nth-of-type(1) {
-
-			&.tLeft {
-				color: #356bf7;
-			}
-		}
 		  
 		td {
 			font-size: 12px;
 			padding: 8px 0px;
 			vertical-align: middle;
 			word-break: break-all;
-			color: #595959;
+			color: #1b1b1b;
 			line-height: 18px;
 
 			&:nth-of-type(1) {
@@ -104,35 +97,39 @@
 			}
 
 			&.allScore {
-				color: #356bf7;
+				color: #ce1427;
 			}
 
 			//遊戲種類著名顏色
 			.gameStyle {
-				color: #ffab00;
+				color: #1f54ab;
 			}
 
 			//已進行時間
 			.gameTime {
-				color: #8d8d8d;
+				color: #595959;
 			}
 
 			//行內按鈕
 			button {
-				background: #ffffff;
-				color: #356bf7;
+				background: linear-gradient(to top,#ffffff 0%,#ebf0f2 19%,#ffffff 82%);
+				color: #ce1427;
 				border-radius: 3px;
 				position: relative;
 				word-break: break-all;
 				overflow: hidden;
 				font-size: 13px;
 				margin: 0px 1px;
-				box-shadow: 1px 2px 8px 0px #00000049;
+				border-style: solid;
+				border-width: 1px;
+				border-color: #ebebeb #d7d7d7 #bababa;
+				box-shadow: 0px 2px 3px 0px #00000049;
 
 				&:hover,&:active,&.active {
-					background: #356bf7;
+					background: #d01a1e;
 					color: #ffffff;
 					box-shadow: none;
+					border: none;
 
 					span {
 						color: #ffffff;
@@ -168,7 +165,7 @@
 				}
 
 				span {
-					color: #595959;
+					color: #1b1b1b;
 					font-size: 12px;
 				}
 
@@ -189,6 +186,7 @@
 				&.disable {
 					background: #e6e6e6;
 					pointer-events: none;
+					border: none;
 					color: transparent;
 					user-select: none;
 					box-shadow: none;
@@ -224,7 +222,7 @@
 				&.tbimg2 {
 					width: 20px;
 					height: 20px;
-					background: url('../images/heart2.png') no-repeat;
+					background: url('../images/heart3.png') no-repeat;
 					background-size: 200%;
 
 					&:hover,&:active,&.active {
@@ -236,7 +234,7 @@
 				&.tbimg3 {
 					width: auto;
 					height: auto;
-					color: #595959;
+					color: #1b1b1b;
 				}
 			}
 			
@@ -244,12 +242,12 @@
 
 			//已完賽顏色
 			&.overGame {
-				color: #ffab00;
+				color: #ce1427;
 			}
 			span {
 
 				&.overGame {
-					color: #ffab00;
+					color: #ce1427;
 				}
 			}
 
@@ -898,7 +896,7 @@
 					p {
 
 						&.first {
-							color: #ffab00;
+							color: #1f54ab;
 						}
 					}
 				}
@@ -910,7 +908,7 @@
 					padding-bottom: 8px;
 
 					&.first {
-						color: #356bf7;
+						color: #ce1427;
 					}
 
 					&:last-child {
@@ -2099,7 +2097,7 @@
 			position: absolute;
 			width: 100%;
 			height: 100%;
-			background: #c7c7c796;
+			background: #00000080;
 		}
 
 		tr {
@@ -2119,28 +2117,28 @@
 			width: 50%;
 			height: auto;
 			padding: 7px;
-			color: #595959;
+			color: #1b1b1b;
 			border-style: solid;
 			border-width: 0px 0px 1px 0px;
-			border-color: #f7f7f7;
+			border-color: #e6e6e6;
 			vertical-align: middle;
 			background: #ffffff;
 			font-size: 12px;
 
 			&.waiting {
-				color: #356bf7;
+				color: #ce1427;
 			}
 
 			&.listName {
 				padding: 15px 7px;
 
 				.vs {
-					color: #ffab00;
+					color: #1f54ab;
 					margin: 0px 5px;
 				}
 
 				.odds {
-					color: #356bf7;
+					color: #ce1427;
 					margin-left: 5px;
 				}
 			}
@@ -2166,7 +2164,7 @@
 				border: solid 1px #c1c1c1;
 				text-align: center;
 				padding: 10px 0px;
-				color: #454545;
+				color: #1b1b1b;
 			}
 		}
 	}
@@ -2177,7 +2175,6 @@
 	width: 96%;
 	height: auto;
 	margin: 2% auto 0px;
-	border-radius: 3px;
 	border: solid 1px #e3e3e3;
 	
 	tr {
@@ -2198,7 +2195,7 @@
 			width: 7%;
 			font-size: 13px;
 			line-height: 15px;
-			color: #454545;
+			color: #1b1b1b;
 
 			&.title {
 				width: 9%;
@@ -2219,7 +2216,7 @@
 
 		th {
 			padding: 7px 15px;
-			color: #356bf7;
+			color: #1b1b1b;
 			font-size: 13px;
 			border-bottom: solid 1px #d8d8d8;
 			text-align: left;
@@ -2228,7 +2225,7 @@
 		td {
 			width: 50%;
 			vertical-align: middle;
-			color: #595959;
+			color: #1b1b1b;
 			padding: 15px;
 			font-size: 13px;
 
@@ -2242,7 +2239,7 @@
 			}
 
 			.leagendName {
-				color: #356bf7;
+				color: #2053ac;
 			}
 
 			&:last-child {
@@ -2461,19 +2458,19 @@
 	//內容
     tr {
 		text-align: center;
-		border-bottom: solid 1px #f0f0f0;
+		border-bottom: solid 1px #dddddd;
 		
 		&.noBorder {
 			border: none;
 		}
 
       	th {
-			color: #454545;
+			color: #ffffff;
 			font-size: 13px;
 			padding: 8px 0px 6px;
 			vertical-align: middle;
-			background: #ffffff;
-			border-bottom: solid 1px #356bf7;
+			background: #39547f;
+			border-bottom: solid 1px #f2f2f2;
 			position: sticky;
 			top: 70px;
 			z-index: 2;
@@ -2510,13 +2507,13 @@
 				position: relative;
 
 				p {
-					color: #595959;
+					color: #1b1b1b;
 					font-size: 14px;
 					line-height: 24px;
 
 					.odd {
 						font-weight: bold;
-						color: #356bf7;
+						color: #ce1427;
 						padding-left: 5px;
 					}
 				}
@@ -2546,7 +2543,7 @@
 				height: 88px;
 				line-height: 88px;
 				vertical-align: top;
-				color: #8d8d8d;
+				color: #1f54ab;
 				position: relative;
 
 				span {
@@ -2560,10 +2557,10 @@
 					left: 50%;
 					transform: translateX(-50%);
 					bottom: -24px;
-					border: solid 1px #f0f0f0;
+					border: solid 1px #dddddd;
 					border-radius: 30px;
 					background: #ffffff;
-					color: #595959;
+					color: #1b1b1b;
 				}
 			}
 
@@ -2573,7 +2570,7 @@
 				height: auto;
 				display: inline-block;
 				padding: 20px 0px;
-				color: #595959;
+				color: #1b1b1b;
 
 				&.lside {
 					text-align: right;
@@ -2628,17 +2625,17 @@
 					}
 
 					p {
-						color: #595959;
+						color: #1b1b1b;
 						font-size: 14px;
 						line-height: 24px;
 
 						&.win {
 							font-weight: bold;
-							color: #356bf7;
+							color: #ce1427;
 						}
 
 						&.lose {
-							color: #454545;
+							color: #1f54ab ;
 						}
 					}
 				}
@@ -2657,14 +2654,14 @@
 					box-shadow: 0px 0px 10px 2px #00000017;
 
 					p {
-						color: #595959;
+						color: #454545;
 						font-weight: bold;
 						font-size: 18px;
 						line-height: 24px;
 						margin-top: 12px;
 
 						&.score {
-							color: #356bf7;
+							color: #ce1427;
 							margin-top: 6px;
 							font-size: 24px;
 
