--- a/css_3/style.css
+++ b/css_3/style.css
@@ -5199,10 +5199,16 @@ main .bg {
   padding: 10px 12px;
   color: #2a2a2a;
 }
+.controlBox .innerBox1 p span {
+  color: #c84a4a;
+  padding-left: 10px;
+  font-size: 12px;
+  font-weight: bold;
+}
 .controlBox .innerBox1 .baseline {
   width: 100%;
   height: 1px;
-  background: #ababab;
+  background: #828282;
 }
 .controlBox .innerBox1 .partingBox {
   height: 54px;
