--- a/scss_3/_type.scss
+++ b/scss_3/_type.scss
@@ -961,12 +961,19 @@
             font-size: 14px;
             padding: 10px 12px;
             color: #2a2a2a;
+
+            span {
+                color: #c84a4a;
+                padding-left: 10px;
+                font-size: 12px;
+                font-weight: bold;
+            }
         }
 
         .baseline {
             width: 100%;
             height: 1px;
-            background: #ababab;
+            background: #828282;
         }
 
         .partingBox {
