--- a/scss_4/_rightside.scss
+++ b/scss_4/_rightside.scss
@@ -30,7 +30,7 @@
     .statusWindow {
         width: 100%;
         height: 113px;
-        background: #ffffff;
+        background: #f5f5f5;
         position: relative;
         
         p {
@@ -45,7 +45,7 @@
             width: 95%;
             height: auto;
             left: 50%;
-            bottom: 4%;
+            bottom: 1%;
             transform: translateX(-50%);
 
             li {
@@ -53,27 +53,20 @@
                 font-size: 14px;
                 position: relative;
                 background: #ffffff;
-                color: #454545;
+                border-style: solid;
+                border-width: 1px;
+                border-color: transparent #e3e3e3 #bdbdbd;
+                color: #1b1b1b;
                 margin-bottom: 3px;
-
-                &::before {
-                    content: "";
-                    position: absolute;
-                    width: 1px;
-                    height: calc(100% + 2px);
-                    left: -1px;
-                    top: -1px;
-                    background: #356bf7;
-                }
 
                 span {
                     float: right;
                     font-size: 12px;
                     padding-top: 2px;
-                    color: #356bf7;
+                    color: #1f54ab;
 
                     &.onWait {
-                        color: #454545;
+                        color: #1b1b1b;
                     }
 
                     &.fail {
@@ -216,24 +209,17 @@
             }
 
             button {
-                width: 49.5%;
+                width: 50%;
                 height: 100%;
                 background: #e6e6e6;
-                color: #595959;
+                color: #1b1b1b;
                 font-size: 14px;
                 float: left;
-                margin-right: 1%;
                 border-radius: 3px 3px 0px 0px;
-                border: solid 1px transparent;
-
-                &:last-child {
-                    margin: 0px;
-                }
 
                 &:hover,&:active,&.active {
-                    background: #ffffff;
-                    border: solid 1px #356bf7;
-                    color: #356bf7;
+                    background: #39547f;
+                    color: #ffffff;
                 }
             }
         }
@@ -455,7 +441,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #f7f7f7;
+            background: #39547f;
 
             &::-webkit-scrollbar {
                 width: 5px;
