--- a/scss_2/_type.scss
+++ b/scss_2/_type.scss
@@ -825,9 +825,7 @@
     transform: translateX(-50%);
     top: 200px;
     z-index: 20;
-    border: solid 1px #3aad1b;
     border-radius: 3px;
-    box-shadow: 0px 0px 10px 2px #517b09;
 
 
     &.display {
@@ -838,14 +836,14 @@
     .signupbar {
         width: 100%;
         height: 50px;
-        background: #242424;
+        background: #356bf7;
         border-radius: 3px 3px 0px 0px;
-        border-bottom: solid 1px #3aad1b;
+        border-bottom: solid 1px #dedede;
         position: relative;
 
         span {
             font-size: 17px;
-            color: #4be119;
+            color: #ffffff;
             line-height: 54px;
             padding-left: 20px;
         }
@@ -856,11 +854,11 @@
             width: 40px;
             height: 40px;
             border-radius: 40px;
-            background: #404040;
-            border: solid 3px #4be119;
+            background: #ededed;
+            border: solid 3px #356bf7;
             right: -50px;
             top: -50px;
-            box-shadow: 0px 0px 0px 5px #404040;
+            box-shadow: 0px 0px 0px 5px #ededed;
 
             &::before {
                 content: "";
@@ -869,7 +867,7 @@
                 height: 18px;
                 right: 16px;
                 top: 8px;
-                background: #4be119;
+                background: #356bf7;
                 transform: rotate(45deg);
             }
 
@@ -880,7 +878,7 @@
                 height: 18px;
                 left: 16px;
                 top: 8px;
-                background: #4be119;
+                background: #356bf7;
                 transform: rotate(-45deg);
             }
         }
@@ -890,7 +888,7 @@
     .signupbox {
         width: 100%;
         height: 265px;
-        background: #242424;
+        background: #ededed;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
 
@@ -915,18 +913,15 @@
                 padding: 3px 0px 3px 10px;
                 float: right;
                 margin: 7px 10px 0px 0px;
-                border-style: solid;
-                border-width: 1px;
-                border-color: transparent #3c3c3c #6c6c6c #3c3c3c;
+                border: solid 1px #e3e3e3;
                 border-radius: 5px;
-                background: linear-gradient(to bottom,#0f0f0f 21%,#303030 100%);
-                box-shadow: 0px 1px 0px 0px #3c3c3c;
-                color: #fff;
+                background: #ffffff;
+                color: #8d8d8d;
             }
 
             span {
                 line-height: 50px;
-                color: #c8c8c8;
+                color: #454545;
                 padding-left: 40px;
             }
 
@@ -934,30 +929,30 @@
                 width: 180px;
                 height: 36px;
                 margin-right: 10px;
-                background: #2d2d2d;
-                border: 1px solid #d9d9d9;
-                color: #b2b2b2;
+                background: #ffffff;
+                border: none;
+                color: #454545;
                 border-radius: 5px;
                 font-size: 16px;
                 font-weight: bold;
+                box-shadow: 1px 2px 8px 0px #00000049;
 
                 &:last-child {
                     margin: 0px;
-                    color: #1c1c1c;
-                    background: linear-gradient(to right,#92e820 0%,#46dd16 100%);
-                    border-color: #6a8e2a;
+                    color: #356bf7;
+                    border: solid 1px #356bf7;
 
                     &:hover,&:active,&.active {
-                        background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
-                        color: #f4f4f4;
-                        border-color: #6a8e2a;
+                        background: linear-gradient(to right, #ffab00 0%, #ff4802 100%);
+                        color: #ffffff;
+                        border: none;
                     }
                 }
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
-                    border-color: #2b7d16;
-                    color: #46d317;
+                    background: #356bf7;
+                    color: #ffffff;
+                    box-shadow: none;
                 }
             }
         }
